--- a/WordPhonics/package.json
+++ b/WordPhonics/package.json
@@ -19,6 +19,8 @@
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.17.0",
+    "react-native-sound": "^0.11.0",
+    "react-native-sound-player": "^0.10.5",
     "react-native-vector-icons": "^8.0.0"
   },
   "devDependencies": {
