--- a/WordPhonics/package.json
+++ b/WordPhonics/package.json
@@ -21,7 +21,8 @@
     "react-native-screens": "^2.17.0",
     "react-native-sound": "^0.11.0",
     "react-native-sound-player": "^0.10.5",
-    "react-native-vector-icons": "^8.0.0"
+    "react-native-vector-icons": "^8.0.0",
+    "typescript": "^4.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
